fix: add text-overflow for workspace title

--- a/frontend/src/components/workspaces/components/create-workspace-button/styles.scss
+++ b/frontend/src/components/workspaces/components/create-workspace-button/styles.scss
@@ -1,5 +1,5 @@
 .create-workspace-card {
-  height: 19rem
+  height: 19rem;
 }
 
 .create-workspace-button.bg-white.d-flex {
