--- a/frontend/src/components/workspaces/components/workspace-item/styles.scss
+++ b/frontend/src/components/workspaces/components/workspace-item/styles.scss
@@ -1,4 +1,10 @@
 .workspace-card {
-  height: 19rem
+  height: 19rem;
 }
 
+.workspace-title {
+  max-width: 17.5vw;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
